--- a/Exercicios/Ex026-media queries/mq004/estilo/mediaquery.css
+++ b/Exercicios/Ex026-media queries/mq004/estilo/mediaquery.css
@@ -12,20 +12,118 @@ Grandes telas: acima de 1200px
 */
 
 @media print{ /* IMPRESSÂO */
-    
-}
+    body{
 
-@media screen and (min-width: 768px) and (max-width: 992px){  /* TABLET */
+         /* Desnecessário */
+        background-image: url(../imagens/back-print.jpg);
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    main{
+        border: 2px solid black;
+    }
+    
+    main > h1{
+         text-shadow: none;
+         color: black;
+    }
+      
+
+            #phone{
+                display: none;
+            }
+            
+            #tablet{
+                display: none;
+            }
+            
+            #print{
+                display: block;
+            }
+            
+            #pc{
+                display: none;
+            }
+            
+            #tv{
+                display: none;
+            }
+        
+    }
+
+@media screen and (min-width: 769px) and (max-width: 992px){  /* TABLET */
     body{
         background-image: url(../imagens/back-tablet.jpg);
+        #phone{
+            display: none;
+        }
+        
+        #tablet{
+            display: block;
+        }
+        
+        #print{
+            display: none;
+        }
+        
+        #pc{
+            display: none;
+        }
+        
+        #tv{
+            display: none;
+        }
     }
 }
 
 @media screen and (min-width: 993px) and (max-width: 1200px){  /* DESKTOP */
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+        #phone{
+            display: none;
+        }
+        
+        #tablet{
+            display: none;
+        }
+        
+        #print{
+            display: none;
+        }
+        
+        #pc{
+            display: block;
+        }
+        
+        #tv{
+            display: none;
+        }
+    }
 
 }
 
 @media screen and (min-width: 1200px){  /* TELAS GRANDES */
-
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+        #phone{
+            display: none;
+        }
+        
+        #tablet{
+            display: none;
+        }
+        
+        #print{
+            display: none;
+        }
+        
+        #pc{
+            display: none;
+        }
+        
+        #tv{
+            display: block;
+        }
+    }
 }
 
