--- a/Exercicios/Ex026-media queries/mq004/estilo/style.css
+++ b/Exercicios/Ex026-media queries/mq004/estilo/style.css
@@ -26,7 +26,7 @@ body{
 
 main{
     background-color: rgba(255, 255, 255, 0.74);
-    width: 400px;
+    width: 80vw;
     border-radius: 10px;
     margin: auto;
     padding: 10px;
