--- a/Exercicios/Ex026-media queries/mq005/estilos/style.css
+++ b/Exercicios/Ex026-media queries/mq005/estilos/style.css
@@ -58,7 +58,7 @@ menu a:hover{
 }
 
 main{
-    width: 90vw;
+    max-width: 768px;
     background-color: white;
     margin: auto;
     padding: 10px;
